2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix last changes.
	* autotroll.mk: Take Automake's complain into account:
          "<: non-POSIX variable name".
	* autotroll.m4: AC_MSG_WARNING is AC_MSG_WARN.

2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Handle UIC, RCC and multiple Makefiles generated by qmake.
	* autotroll.mk: Additionnal implicit rules to compile interfaces (.ui)
          or Qt resources (.qrc).
	* autotroll.m4: Detect qrc (in $(QRC)). Update doc. Handle multiple
          Makefiles generated by qmake (Makefile.Debug, Makefile.Release...).

2006-11-01  Akim Demaille  <akim@lrde.epita.fr>

	Default is --without-openr
	* urbi-openr.m4: Do that.

2006-11-01  Akim Demaille  <akim@lrde.epita.fr>

	URBI_LIBPORT
	* urbi-libport.m4: New.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	More external aliases
	* svn-externals (lurbi, uobj): New.
	More assertions.
	Unfortunately, in some situations I don't understand well yet,
	my exit 1 are ignored!

2006-10-31  Akim Demaille  <demaille@gostai.com>

	make help
	* build-aux.mk (help): New target.
	(SVN): New variable.
	Accept aliases of target names.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Extend URBI_FLOAT
	* urbi-ufloat.m4: Support 5 supports, tabulated or not.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	rebox.el
	* rebox.el: New.
	* README: Adjust.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Reindent
	* reindent: New.
	* README: Update.

2006-10-31  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Handle multiple extensions properly.
	* autotroll.mk: Here.

2006-10-27  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Don't skip empty files when generating reference outputs.
	* test.sh: Because it might be confusing and because it might leads to
          dist problems (eg: EXTRA_DIST = $(TESTS:.test=.stdout) will make
          "make dist" fail because a .stdout is missing because it was empty).
