@@ -1,3 +1,9 @@
+2006-11-03  Akim Demaille  <akim.demaille@free.fr>
+
+	init.mk
+	* urbi-dirs.m4 (urbiincludedir): New.
+	* init.mk: New.
+
 2006-11-02  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	Fix last changes.
